# docs/openapi/openapi.yaml
@@ -1,21 +1,5 @@
 components:
   schemas:
-    CreateShortURLInputBody:
-      additionalProperties: false
-      properties:
-        $schema:
-          description: A URL to the JSON Schema for this object.
-          examples:
-            - https://example.com/schemas/CreateShortURLInputBody.json
-          format: uri
-          readOnly: true
-          type: string
-        original_url:
-          description: Original URL to shorten
-          type: string
-      required:
-        - original_url
-      type: object
     ErrorDetail:
       additionalProperties: false
       properties:
@@ -91,16 +75,13 @@ components:
           readOnly: true
           type: string
         id:
-          description: Unique identifier
-          readOnly: true
+          description: Unique id
           type: string
         original_url:
           description: Original URL to shorten
           type: string
       required:
-        - id
         - original_url
-        - create_time
       type: object
 info:
   title: MinURL API
@@ -114,7 +95,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/CreateShortURLInputBody"
+              $ref: "#/components/schemas/ShortURL"
         required: true
       responses:
         "200":
