# internal/model/short_url.go
@@ -7,7 +7,7 @@ import "time"
 
 // ShortURL represents a shortened URL resource.
 type ShortURL struct {
-	ID          string    `json:"id"           readOnly:"true" doc:"Unique identifier"`
-	OriginalURL string    `json:"original_url"                 doc:"Original URL to shorten"`
-	CreateTime  time.Time `json:"create_time"  readOnly:"true" doc:"Creation time"`
+	ID          string    `json:"id,omitempty"          validate:"omitempty,shortid" doc:"Unique id"`
+	OriginalURL string    `json:"original_url"          validate:"required,url"      doc:"Original URL to shorten" required:"true"`
+	CreateTime  time.Time `json:"create_time,omitempty"                              doc:"Creation time"                           readOnly:"true"`
 }
